tests/baselines/reference/arrayLiterals2.errors.txt
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals2.ts(23,5): error TS2322: Type '(string[] | number[])[]' is not assignable to type 'tup'.
  Property '0' is missing in type '(string[] | number[])[]'.
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals2.ts(24,5): error TS2322: Type 'number[]' is not assignable to type '[number, number, number]'.
  Property '0' is missing in type 'number[]'.
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals2.ts(27,5): error TS2322: Type '(string | number)[]' is not assignable to type 'myArray'.
  Types of property 'push' are incompatible.
    Type '(...items: (string | number)[]) => number' is not assignable to type '(...items: Number[]) => number'.
      Types of parameters 'items' and 'items' are incompatible.
        Type 'string | number' is not assignable to type 'Number'.
          Type 'string' is not assignable to type 'Number'.
            Property 'toFixed' is missing in type 'String'.


==== tests/cases/conformance/expressions/arrayLiterals/arrayLiterals2.ts (3 errors) ====
    var a = [2,3,4]
    var a1 = ["hello", "world"]
    var a2 = [undefined, null, undefined];
    var a3 = []
    var a4: number[] = [...a3];
    var a5: number[] = [];
    
    var b = [, , , ...a,"hello"];
    var c = [() => 1,];
    var d = [...c,,];
    var e = [,,...d];
    var g = [[1, 2, "hello"], ["string", true]];
    var h = [...g];
    var i: [number[], string[]] = [[1, 2, 3],["hello", "string"]];
    var j = [...i];
    var k:Array<number[]|string[]> = [...i];
    interface tup {
        0: number[]|string[];
        1: number[]|string[];
    }
    interface myArray extends Array<Number> {}
    interface myArray2 extends Array<Number|String> {}
    var l: tup = [...i];  // error
        ~
!!! error TS2322: Type '(string[] | number[])[]' is not assignable to type 'tup'.
!!! error TS2322:   Property '0' is missing in type '(string[] | number[])[]'.
    var m: [number, number, number] = [...a];  // error
        ~
!!! error TS2322: Type 'number[]' is not assignable to type '[number, number, number]'.
!!! error TS2322:   Property '0' is missing in type 'number[]'.
    var n: number[] = [...a];
    var o: myArray = [...a];
    var p: myArray = [...a, ...a1];  // error
        ~
!!! error TS2322: Type '(string | number)[]' is not assignable to type 'myArray'.
!!! error TS2322:   Types of property 'push' are incompatible.
!!! error TS2322:     Type '(...items: (string | number)[]) => number' is not assignable to type '(...items: Number[]) => number'.
!!! error TS2322:       Types of parameters 'items' and 'items' are incompatible.
!!! error TS2322:         Type 'string | number' is not assignable to type 'Number'.
!!! error TS2322:           Type 'string' is not assignable to type 'Number'.
!!! error TS2322:             Property 'toFixed' is missing in type 'String'.
    var q: myArray2 = [...a, ...a1];
    var r = [...a2];
    var r1 = [...a3];
    var r2 = [...a4];
    var r3:number[][] = [[...a4]];